# rune

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  Makefile  README.md  SECURITY.md  profiles.yaml  pyproject.toml
.github/workflows/: pages.yml
.github/workflows/scripts/: build-site.sh  site-index.html
docs/: index.md  phase-1-explore.md  phase-2-plan.md  phase-3-execute.md  site-index.html  the-context-budget.md  the-edit-distance-of-understanding.md  the-knowledge-creation-cycle.md  the-knowledge-toolkit.md  the-safety-architecture.md  the-three-phase-model.md
schemas/: agent.schema.json  frontmatter-map.schema.json  hooks-meta.schema.json  mcps.schema.json  profiles.schema.json  rune-session-state.schema.json  statusline.schema.json
scripts/: mcp-manager.py  resource-manager.py  validate-schemas.py
src/: hooks-meta.yaml  mcps.yaml
src/agents/core/: architect.md  designer.md  developer.md  devops.md  judge.md  planner.md  (+6 more)
src/cli/: _common.py  app.py  settings.py
src/hooks/: auto-lint-rules.yaml  auto-lint.py  on-stage-complete.py  safety-check.py  safety-patterns.yaml
src/knowledge/: README.md
src/rune-agency/: hooks-meta.yaml  mcps.yaml
tests/: conftest.py  test-safety-check.py  test_rune.py  test_site_generator.py
tools/: registry.yaml
tools/bat/: install-bat.sh  uninstall-bat.sh
tools/claude/: replay-output.sh
tools/eza/: install-eza.sh  uninstall-eza.sh
tools/fd/: install-fd.sh  uninstall-fd.sh
tools/fzf/: install-fzf.sh  uninstall-fzf.sh
tools/peon-ping/: configure_claude.py  configure_opencode.py  install-peon-ping.sh  profiles.yaml  uninstall-peon-ping.sh
tools/rg/: install-rg.sh  uninstall-rg.sh
tools/rtk/: install-rtk.sh  uninstall-rtk.sh
tools/starship/: install-starship.sh  record-rune-demo.sh  rune-demo.bashrc  rune-demo.toml  uninstall-starship.sh
tools/uv/: install-uv.sh  uninstall-uv.sh
tools/yq/: install-yq.sh  uninstall-yq.sh
tools/zoxide/: install-zoxide.sh  uninstall-zoxide.sh
(+124 files in other folders)
